Name          : RuneSlayer
Version       : 0.1.0
Build-Type    : Simple
Author        : Maksymilian Owsianny
Cabal-Version : >= 1.18

Executable RuneSlayer
  default-language : Haskell2010
  hs-source-dirs   : src
  main-is          : Main.hs
  ghc-options      :
    -O2
    -Wall
    -fdiagnostics-color=always
    -fno-warn-missing-home-modules
    -- -fno-warn-orphans
    -- -fno-warn-unused-imports
    -fno-warn-missing-pattern-synonym-signatures
    -fwarn-identities
    -Werror=missing-fields
    -Werror=incomplete-patterns

  default-extensions:
    NoImplicitPrelude
    DoAndIfThenElse
    LambdaCase
    MultiWayIf
    TupleSections
    OverloadedStrings

    MultiParamTypeClasses
    FunctionalDependencies
    TypeSynonymInstances
    FlexibleInstances
    FlexibleContexts
    RankNTypes

    StandaloneDeriving
    DeriveGeneric
    GeneralizedNewtypeDeriving

    TypeFamilies
    TypeApplications
    TypeOperators
    ViewPatterns

    DataKinds
    ConstraintKinds
    DuplicateRecordFields
    OverloadedLabels

    StrictData

  build-depends : base >= 4.5 && < 5.0
                , relude
                , data-default
                , lens
                , generic-lens
                , transformers
                , text
                , bytestring
                , containers
                , unordered-containers
                , hashable
                , bimap
                , GLFW-b
                , random
                , mwc-random
                , vector
                , reflection
                , repa
                , repa-algorithms
                , JuicyPixels
                , time
                , Noise

                , aeson
                , dhall
                , dhall-json

                , linear
                , Carnot == 0.1.16.1
                , gl
                , colour
                , palette
                , diagrams-core
                , diagrams-lib
                -- , bytestring-trie

                , ixset
                -- , ixset-typed

                , cabal-file-th
                , git-embed
                , executable-hash

                , reload-utils
